[package]
name = "feed-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "feed-service"
path = "src/main.rs"

[lib]
name = "recommendation_service"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
actix-web.workspace = true
actix-rt.workspace = true
tokio.workspace = true
sqlx.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
dotenv.workspace = true
envy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
reqwest.workspace = true
prometheus.workspace = true
utoipa = { version = "4", features = ["chrono", "uuid"] }
utoipa-swagger-ui = { version = "5", features = ["actix-web"] }

# Recommendation-specific
ndarray = "0.15"
tract-onnx = "0.21"
once_cell = "1.19"
neo4rs = "0.8"
rdkafka.workspace = true
clickhouse.workspace = true
futures = "0.3"
tokio-stream = "0.1"
base64.workspace = true
jsonwebtoken.workspace = true
lazy_static = "1.4"

# gRPC
tonic.workspace = true
prost.workspace = true

# Shared libraries
error-types = { path = "../libs/error-types" }
error-handling = { path = "../libs/error-handling" }
video-core = { path = "../libs/video-core" }
db-pool = { path = "../libs/db-pool" }
crypto-core = { path = "../libs/crypto-core" }

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.8"
