[package]
name = "feed-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "feed-service"
path = "src/main.rs"

[lib]
name = "recommendation_service"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
actix-web.workspace = true
actix-rt.workspace = true
tokio.workspace = true
sqlx.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
dotenv.workspace = true
envy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
reqwest.workspace = true
prometheus.workspace = true
utoipa = { version = "4", features = ["chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }

# Kafka for event streaming
rdkafka.workspace = true
clickhouse.workspace = true
once_cell = "1.19"  # Still used by metrics and utils modules
futures = "0.3"
tokio-stream = "0.1"
base64.workspace = true
jsonwebtoken.workspace = true
lazy_static = "1.4"

# TLS (Rustls) - Required for grpc-tls crypto provider
rustls = { version = "0.23", default-features = false, features = ["std", "aws-lc-rs"] }

# gRPC
tonic.workspace = true
tonic-health.workspace = true
prost.workspace = true

# Shared libraries
error-types = { path = "../libs/error-types" }
error-handling = { path = "../libs/error-handling" }
video-core = { path = "../libs/video-core" }
db-pool = { path = "../libs/db-pool" }
crypto-core = { path = "../libs/crypto-core" }
grpc-clients = { path = "../libs/grpc-clients" }
grpc-metrics = { path = "../libs/grpc-metrics" }
grpc-tls = { path = "../libs/grpc-tls" }  # ✅ P0: mTLS for service-to-service auth

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.8"
testcontainers.workspace = true
