[package]
name = "graphql-gateway"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "graphql-gateway"
path = "src/main.rs"

[dependencies]
# Core
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# GraphQL
async-graphql = { version = "7.0", features = ["dataloader", "boxed-trait"] }
async-graphql-actix-web = "7.0"

# Web framework
actix-web = { workspace = true }
actix-cors = "0.7"
actix-multipart = "0.7"

# gRPC clients (to call backend services)
tonic = { workspace = true }
prost = { workspace = true }
pbjson-types = "0.7"  # For google.protobuf.Timestamp support
rustls = { version = "0.23", features = ["ring"] }  # TLS crypto provider

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
opentelemetry-config = { path = "../libs/opentelemetry-config" }

# Configuration
config = "0.14"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Environment
dotenvy = "0.15"

# Database pool (for caching/session)
sqlx = { workspace = true, features = ["runtime-tokio", "postgres"] }
db-pool = { path = "../libs/db-pool" }

# Authentication
jsonwebtoken = "9.3"
crypto-core = { path = "../libs/crypto-core" }
uuid = { workspace = true }
aws-secrets = { path = "../libs/aws-secrets" }

# Caching
redis = { version = "0.25", features = ["aio", "tokio-comp", "connection-manager"] }
md5 = "0.7"
dashmap = "6.1"  # ✅ Quick Win #5: Concurrent in-memory cache for GraphQL queries
bytes = "1.9"    # ✅ Quick Win #5: Zero-copy buffer for cached responses

# Utilities
chrono = { workspace = true }
num_cpus = "1.16"
futures-util = "0.3"
base64 = "0.22"
async-trait = "0.1"  # ✅ P0-5: For DataLoader trait implementations
reqwest = { workspace = true }  # For HTTP API calls (Alice AI)

# Rate limiting
governor = { workspace = true }  # ✅ P0-3: Added for GraphQL Gateway rate limiting
lru = "0.12"  # LRU cache for per-IP rate limiters

# Resilience (timeout, circuit breaker)
resilience = { path = "../libs/resilience" }  # ✅ P0: Timeout protection & circuit breakers
tower = { workspace = true }  # ✅ P0: Tower middleware for gRPC clients

# gRPC client config with TLS/mTLS and dependency tiers
grpc-clients = { path = "../libs/grpc-clients" }

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build"] }  # ✅ P0-5: For subscription event streaming

# Metrics
prometheus = { workspace = true }  # ✅ Quick Win #5: Cache performance metrics
lazy_static = "1.5"  # ✅ Quick Win #5: For static metric registry

# Persisted Queries
sha2 = "0.10"  # ✅ P1: SHA-256 hashing for Automatic Persisted Queries (APQ)
once_cell = "1.19"  # For lazy static initialization (Alice enhance cache)

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
serial_test = { workspace = true }
tempfile = "3.10"  # For persisted queries tests
regex = "1.10"  # For security logging tests (PII detection patterns)
