[package]
name = "identity-service"
version = "2.0.0"
edition = "2021"

[dependencies]
# Core
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# gRPC
tonic = "0.10"
prost = "0.12"
tonic-reflection = "0.10"
tonic-health = "0.10"  # P0-4: gRPC health check protocol

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
db-pool = { path = "../libs/db-pool" }

# Authentication
jsonwebtoken = "9.3"
argon2 = "0.5"
crypto-core = { path = "../libs/crypto-core" }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Caching
redis = { version = "0.25", features = ["aio", "tokio-comp", "connection-manager"] }
dashmap = "6.1"

# Events
rdkafka = { version = "0.36", features = ["cmake-build"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.21"
opentelemetry-jaeger = "0.20"
prometheus = { version = "0.13", features = ["process"] }

# Configuration
config = "0.14"
dotenv = "0.15"

# Resilience (P0-5)
resilience = { path = "../libs/resilience" }

# TLS/mTLS (P0-1)
grpc-tls = { path = "../libs/grpc-tls" }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
async-trait = "0.1"
base64 = "0.22"

# Rate limiting
governor = "0.6"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
mockall = "0.12"
serial_test = "3.0"