[package]
name = "identity-service"
version = "2.0.0"
edition = "2021"

[dependencies]
# Core
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# gRPC
tonic = "0.12"
prost = "0.13"
tonic-reflection = "0.12"
tonic-health = "0.12"  # P0-4: gRPC health check protocol

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"], default-features = false }
db-pool = { path = "../libs/db-pool" }

# Authentication
jsonwebtoken = "9.3"
argon2 = "0.5"
crypto-core = { path = "../libs/crypto-core" }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Caching
redis = { version = "0.25", features = ["aio", "tokio-comp", "connection-manager"] }
dashmap = "6.1"

# Events
rdkafka = { version = "0.36", features = ["cmake-build"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.21"
opentelemetry-jaeger = "0.20"
opentelemetry-config = { path = "../libs/opentelemetry-config" }
prometheus = { version = "0.13", features = ["process"] }

# Configuration
config = "0.14"
dotenvy = "0.15"
aws-secrets = { path = "../libs/aws-secrets" }

# AWS SDK (for SNS SMS delivery)
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-sns = "1.47"

# Resilience (P0-5)
resilience = { path = "../libs/resilience" }

# TLS/mTLS (P0-1)
grpc-tls = { path = "../libs/grpc-tls" }
rustls = { version = "0.23", default-features = false, features = ["std", "aws-lc-rs"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
async-trait = "0.1"
base64 = "0.22"
once_cell = "1.19"
hex = "0.4"
rand = "0.8"
sha2 = "0.10"

# Rate limiting
governor = "0.6"

# Validation
validator = { version = "0.20", features = ["derive"] }
regex = "1.10"
zxcvbn = "2"

# OAuth
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"

# Email (for verification)
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }

# TOTP/2FA
totp-lite = "2.0"
qrcode = "0.12"
image = "0.24"

# Shared libraries
error-types = { path = "../libs/error-types" }
event-schema = { path = "../libs/event-schema" }
redis-utils = { path = "../libs/redis-utils" }
grpc-metrics = { path = "../libs/grpc-metrics" }
transactional-outbox = { path = "../libs/transactional-outbox" }

# HTTP server for internal endpoints (Zitadel Actions)
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1.4"

# API documentation (optional - for future HTTP endpoints)
utoipa = { version = "5.4", features = ["chrono", "uuid"], optional = true }
utoipa-swagger-ui = { version = "9", features = ["actix-web"], optional = true }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
mockall = "0.12"
serial_test = "3.0"
tokio-test = "0.4"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4"] }
