[package]
name = "media-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "media-service"
path = "src/main.rs"

[lib]
name = "media_service"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
actix-web = { workspace = true }
actix-rt = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
utoipa = { workspace = true }

# Media-specific dependencies
futures = "0.3"
actix-multipart = "0.4"
image = "0.24"
bytes = "1.5"
crypto-core = { path = "../libs/crypto-core" }
error-types = { path = "../libs/error-types" }
aws-sdk-s3 = "1.9"
aws-config = "1.1"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tokio-test = "0.4"
