[package]
name = "media-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "media-service"
path = "src/main.rs"

[lib]
name = "media_service"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
actix-web = { workspace = true }
actix-rt = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { version = "5", features = ["actix-web"] }
prometheus = { workspace = true }
once_cell = "1.19"

# Media-specific dependencies
futures = "0.3"
actix-multipart = "0.4"
image = "0.24"
bytes = "1.5"

# Shared libraries
crypto-core = { path = "../libs/crypto-core" }
error-types = { path = "../libs/error-types" }
db-pool = { path = "../libs/db-pool" }
redis-utils = { path = "../libs/redis-utils" }
actix-middleware = { path = "../libs/actix-middleware" }
grpc-metrics = { path = "../libs/grpc-metrics" }

# AWS dependencies
aws-sdk-s3 = "1.9"
aws-config = "1.1"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tokio-test = "0.4"
