[package]
name = "media-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "media-service"
path = "src/main.rs"

[[bin]]
name = "thumb-migrate"
path = "src/bin/thumb_migrate.rs"

[[bin]]
name = "thumb-worker"
path = "src/bin/thumb_worker.rs"

[lib]
name = "media_service"
path = "src/lib.rs"

[dependencies]
# ============================================================================
# WORKSPACE DEPENDENCIES
# ============================================================================
actix-web = { workspace = true }
actix-rt = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
envy = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
prometheus = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Event streaming & analytics
rdkafka = { workspace = true }
clickhouse = { workspace = true }

# ============================================================================
# MEDIA PROCESSING (from media-service, video-service)
# ============================================================================
futures = "0.3"
actix-multipart = "0.7"
image = "0.24"
bytes = "1.5"

# ============================================================================
# CDN & SIGNING (from cdn-service)
# ============================================================================
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
url = "2.5"
rsa = { version = "0.9", features = ["sha2"] }
percent-encoding = "2"
urlencoding = { workspace = true }

# ============================================================================
# STREAMING & WEBSOCKET (from streaming-service)
# ============================================================================
actix-ws = "0.2"
actix-web-actors = "4.3"
actix = "0.13"
validator = { version = "0.20", features = ["derive"] }

# ============================================================================
# GCP DEPENDENCIES (Cloud Storage + Transcoder API)
# ============================================================================
google-cloud-googleapis = "0.16"
google-cloud-auth = "0.16"
hyper = { version = "1.5", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
http-body-util = "0.1"
tower = "0.5"

# ============================================================================
# gRPC INFRASTRUCTURE
# ============================================================================
tonic-health = "0.12"  # P0-4: gRPC health check protocol

# ============================================================================
# API DOCUMENTATION
# ============================================================================
utoipa = { version = "5.4", features = ["chrono", "uuid"] }  # Added features from streaming-service
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }

# ============================================================================
# UTILITIES
# ============================================================================
once_cell = "1.19"

# ============================================================================
# TLS (Rustls)
# ============================================================================
rustls = { version = "0.23", default-features = false, features = ["std", "aws-lc-rs"] }

# ============================================================================
# RESILIENCE (P0-5)
# ============================================================================
resilience = { path = "../libs/resilience" }

# ============================================================================
# TLS/mTLS (P0-1)
# ============================================================================
grpc-tls = { path = "../libs/grpc-tls" }

# ============================================================================
# SHARED LIBRARIES
# ============================================================================
crypto-core = { path = "../libs/crypto-core" }
error-types = { path = "../libs/error-types" }
error-handling = { path = "../libs/error-handling" }  # From video-service, streaming-service
db-pool = { path = "../libs/db-pool" }
redis-utils = { path = "../libs/redis-utils" }
actix-middleware = { path = "../libs/actix-middleware" }
grpc-metrics = { path = "../libs/grpc-metrics" }
grpc-clients = { path = "../libs/grpc-clients" }  # From streaming-service
video-core = { path = "../libs/video-core" }  # From video-service
transactional-outbox = { path = "../libs/transactional-outbox" }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"
