[package]
name = "messaging-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
apns2 = "0.1"
fcm = "0.9"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager", "streams"] }
rdkafka = { version = "0.36", features = ["tokio"] }
dotenvy = "0.15"
thiserror = "2"
crypto-core = { path = "../libs/crypto-core" }
redis-utils = { path = "../libs/redis-utils" }
nova-apns-shared = { path = "../libs/nova-apns-shared" }
chrono = { workspace = true }
once_cell = "1.19"
base64 = { workspace = true }
tower-http = { version = "0.5", features = ["trace"] }
utoipa = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hkdf = { workspace = true }
x25519-dalek = "2.0"
rand = "0.8"
tonic = "0.11"
prost = "0.12"
error-types = { path = "../libs/error-types" }
prometheus = { workspace = true }

[profile.release]
codegen-units = 1
lto = true

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
testcontainers = "0.16"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
