[package]
name = "notification-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "notification-service"
path = "src/main.rs"

[lib]
name = "notification_service"
path = "src/lib.rs"

[dependencies]
actix = "0.13"
actix-web.workspace = true
actix-web-actors = "4.3"
actix-rt.workspace = true
tokio.workspace = true
sqlx.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
dotenvy.workspace = true
envy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
reqwest.workspace = true
prometheus.workspace = true
jsonwebtoken.workspace = true
once_cell = "1.19"

# Notification-specific
futures = "0.3"
rdkafka.workspace = true

# gRPC
tonic.workspace = true
tonic-health.workspace = true
prost.workspace = true

# Shared libraries
error-types = { path = "../libs/error-types" }
db-pool = { path = "../libs/db-pool" }
nova-fcm-shared = { path = "../libs/nova-fcm-shared" }
nova-apns-shared = { path = "../libs/nova-apns-shared" }
resilience = { path = "../libs/resilience" }  # ✅ P1: Timeout protection & circuit breakers
grpc-tls = { path = "../libs/grpc-tls" }  # ✅ P0: mTLS for service-to-service auth
redis-utils = { path = "../libs/redis-utils" }  # Redis pool for distributed deduplication

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"
