[package]
name = "ranking-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "ranking-service"
path = "src/main.rs"

[lib]
name = "ranking_service"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
redis.workspace = true
async-trait.workspace = true
dotenvy.workspace = true
envy.workspace = true

# ML dependencies
ndarray = "0.15"
tract-onnx = "0.21"

# gRPC
tonic.workspace = true
prost.workspace = true
tonic-health.workspace = true
tower.workspace = true

# TLS
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "logging", "std", "tls12"] }

# Shared libraries
resilience = { path = "../libs/resilience" }
grpc-tls = { path = "../libs/grpc-tls" }
grpc-clients = { path = "../libs/grpc-clients" }
grpc-metrics = { path = "../libs/grpc-metrics" }
grpc-health = { path = "../libs/grpc-health" }

# Service-specific
futures = "0.3"
dashmap.workspace = true

# Profile Builder dependencies
clickhouse = { version = "0.12", features = ["time", "rustls-tls"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
time = "0.3"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
