[package]
name = "realtime-chat-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# WebSocket
tokio-tungstenite = "0.28"
futures-util = "0.3"
futures = "0.3"
actix-web-actors = "4.3"
actix = { workspace = true }

# E2EE Crypto
x25519-dalek = "2.0"
hkdf = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rand = "0.8"

# gRPC
tonic = { workspace = true }
tonic-health = { workspace = true }
prost = { workspace = true }

# HTTP Server
actix-web = { workspace = true }
actix-rt = { workspace = true }
actix-cors = "0.7"

# Database
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager", "streams"] }

# Shared Libraries
db-pool = { path = "../libs/db-pool" }
redis-utils = { path = "../libs/redis-utils" }
crypto-core = { path = "../libs/crypto-core" }
grpc-tls = { path = "../libs/grpc-tls" }
grpc-clients = { path = "../libs/grpc-clients" }
resilience = { path = "../libs/resilience" }
error-types = { path = "../libs/error-types" }
actix-middleware = { path = "../libs/actix-middleware" }
grpc-metrics = { path = "../libs/grpc-metrics" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenvy = "0.15"
thiserror = "1"
once_cell = "1.19"
chrono = { workspace = true }
bytes = "1.5"
env_logger = "0.11"

# Metrics
prometheus = { workspace = true }

# OpenAPI
utoipa = { workspace = true }
utoipa-swagger-ui = { version = "5", features = ["actix-web"] }

# AWS
aws-sdk-s3 = "1.9"
aws-config = "1.1"

# Tokio stream
tokio-stream = "0.1"

[profile.release]
codegen-units = 1
lto = true

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
testcontainers = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
