[package]
name = "generate-test-token"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate_test_token"
path = "generate_test_token.rs"

[dependencies]
jsonwebtoken = "9.2"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
