[package]
name = "search-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "search-service"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = { workspace = true }
actix-rt = { workspace = true }
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Resilience (P0-5)
resilience = { path = "../libs/resilience" }

# TLS/mTLS (P0-1)
grpc-tls = { path = "../libs/grpc-tls" }
# Utilities
anyhow = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "1"

# Redis
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rdkafka = { workspace = true }

# ClickHouse
clickhouse = { version = "0.12", features = ["rustls-tls"] }

# Hashing
md5 = "0.7"

# OpenAPI
utoipa = { version = "4", features = ["chrono", "uuid"] }
utoipa-swagger-ui = { version = "5", features = ["actix-web"] }
elasticsearch = "8.19.0-alpha.1"
url = "2"
error-types = { path = "../libs/error-types" }
actix-middleware = { path = "../libs/actix-middleware" }
db-pool = { path = "../libs/db-pool" }
tonic-health.workspace = true
tonic = { workspace = true }
prost = { workspace = true }

[build-dependencies]
tonic-build = "0.12"

[profile.release]
codegen-units = 1
lto = true
